# notbat

./: .gitignore  Makefile  README.md  loader.py  loss.txt  model.py  model.txt  normal.py  train.py
datas/: test.mid
render/: CMakeLists.txt  editTable.cpp  editTable.h  main.cpp  midiMap.h  note.h  offline.cpp  offline.h  offline_freqbuilder.h  player.cpp  player.h
